@@ -34,16 +34,16 @@ ico_SOURCES =	\
         objpyr.h \
         polyinfo.h
 
-appman_SOURCES = \
+appman_PRE = \
         ico.man
 
 
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
